--- a/ProyectoFinal_Hotel/src/Interfaces_Vistas/huespedesHabitacion.form
+++ b/ProyectoFinal_Hotel/src/Interfaces_Vistas/huespedesHabitacion.form
@@ -121,6 +121,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Salir"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBsalirActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
