--- a/ProyectoFinal_Hotel/src/Interfaces_Vistas/huespedesHabitacion.form
+++ b/ProyectoFinal_Hotel/src/Interfaces_Vistas/huespedesHabitacion.form
@@ -92,6 +92,9 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jChuespedActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Huesped&gt;"/>
       </AuxValues>
